--- a/index.html
+++ b/index.html
@@ -124,12 +124,14 @@
   
   <main>
     <!-- Image and Description -->
-    <img src="mechanics-workshop.jpg" alt="Mechanics Workshop" width="400" height="300">
+    <img src="Bermuda-Motors.jpg" alt="Mechanics Workshop" width="400" height="300">
     <h2>About Our Mechanics Workshop</h2>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum gravida bibendum tellus, at lacinia libero feugiat et.
-      Fusce nec enim sapien. Nullam eu efficitur risus. Donec in nisi at nisi rutrum commodo id eu sem.
-      Integer sagittis felis vel est consectetur, vel finibus leo interdum. Aenean iaculis nulla non lacus facilisis, ac luctus tortor efficitur.
+        Welcome to Bermuda Motors, your trusted local business with a reputable name and decades of experience in all aspects of automobile repairs.
+        Our dedicated team of expert mechanics is committed to providing top-notch service and ensuring the satisfaction of our valued customers.
+        Whether it's routine maintenance, major repairs, or diagnostics, you can trust us to handle it with precision and care.
+        We take pride in our expertise and keep up with the latest industry advancements to offer reliable solutions for all your automotive needs.
+        At Bermuda Motors, your vehicle is in safe hands!
     </p>
   </main>
   
@@ -137,9 +139,10 @@
     <div class="footer-links">
       <!-- Footer with contact links -->
       <a href="tel:033389256">Call Us</a>
-      <a href="mailto:info@bermudamotors.com">Email Us</a>
+      <a href="mailto:BermudaMotors@outlook.com">Email Us</a>
+      <br>
     </div>
-    <p>Address: Corner Wrights Rd and Hilmorton St, Addington, Christchurch</p>
+    <p>Corner Wrights Rd and Hilmorton St, Addington, Christchurch</p>
     <p>Phone: 03 3389256</p>
   </footer>
 </body>
