--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <!-- Footer with contact links -->
     <div class="footer-links">
       <a href="tel:033389256">Call Us</a>
-      <a href="mailto:BermudaMotors@outlook.com">Email Us</a>
+      <a href="mailto: peter@bermudamotors.co.nz">Email Us</a>
     </div>
     <p>Corner Wrights Rd and Hilmorton St, Addington, Christchurch</p>
     <p>Phone: 03 3389256</p>
