--- a/index.html
+++ b/index.html
@@ -143,11 +143,10 @@
   <footer>
     <!-- Footer with contact links -->
     <div class="footer-links">
-      <a href="tel:033389256">Call Us</a>
-      <a href="mailto: peter@bermudamotors.co.nz">Email Us</a>
+      <a href="tel:033389256">Call Us 03 3389256</a>
+      <a href="mailto: peter@bermudamotors.co.nz">peter@bermudamotors.co.nz </a>
     </div>
     <p>Corner Wrights Rd and Hilmorton St, Addington, Christchurch</p>
-    <p>Phone: 03 3389256</p>
   </footer>
 </body>
 
